# Bugs-Life-Project

./: Board.cpp  Board.h  Bug.cpp  Bug.h  CMakeLists.txt  Crawler.cpp  Crawler.h  Hopper.cpp  Hopper.h  Teleporter.cpp  Teleporter.h  bugs.txt  bugs_life_history_2024-04-27_06-06-03.out  main.cpp
